# youtube_segment

./: .gitignore  CHANGELOG.md  GITHUB_ACTIONS_GUIDE.md  MANIFEST.in  PROJECT_SUMMARY.md  PYPI_GUIDE.md  README.md  RELEASE_README.md  USER_GUIDE.md  build_executable.py  pyproject.toml  requirements.txt  setup.py  youtube_segment_downloader.py  youtube_segment_downloader_gui.py
.github/workflows/: build-executables.yml
tests/: test_downloader.py
youtube_segment_downloader/: __init__.py  __main__.py  cli.py  downloader.py
