[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-segment-downloader"
version = "1.0.3"
description = "Téléchargez des segments spécifiques de vidéos YouTube en MP4"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["youtube", "video", "download", "segment", "clip", "extract", "mp4"]
authors = [
    {name = "Daniel"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "yt-dlp>=2023.1.1"
]

[project.urls]
Homepage = "https://github.com/yourusername/youtube-segment-downloader"
Repository = "https://github.com/yourusername/youtube-segment-downloader"
Issues = "https://github.com/yourusername/youtube-segment-downloader/issues"

[project.scripts]
yt-segment = "youtube_segment_downloader.cli:main"

[tool.setuptools]
packages = ["youtube_segment_downloader"]
